[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Zedekul" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
reqwest = { version = "0.10", features = [ "stream" ] }
tauri = { version = "0.5", features = [ "all-api", "edge" ] }
tauri-api = "0.5"
async-std = { version = "1.6", features = [ "tokio02" ] }
futures = "0.3"
anyhow = "1.0"
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
