[package]
name = "lofter-backup"
version = "1.0.0"
description = "Back up posts from Lofter blogs."
authors = [ "Zedekul" ]
license = "MIT"
repository = "https://github.com/Zedekul/lofter-backup"
default-run = "lofter-backup"
edition = "2018"
build = "src/build.rs"

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
reqwest = { version = "0.10", features = [ "stream" ] }
tauri = { version = "0.6", features = [ "all-api", "edge" ] }
tauri-api = "0.6"
async-std = { version = "1.6", features = [ "tokio02" ] }
futures = "0.3"
anyhow = "1.0"
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
base64 = "0.12"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "lofter-backup"
path = "src/main.rs"
